<resources>
    <string name="app_name">rickandmorty</string>
    <string name="error_unexpected">Error.</string>
    <string name="title_episodes">Episodes</string>
    <string name="title_origin">Origin</string>
    <string name="title_location">Location</string>
    <string name="title_reset">Reset</string>
    <string name="filter">Filter</string>
    <string name="status">Status</string>
    <string name="gender">Gender</string>
    <string name="apply">Apply</string>

    <string name="alive">Alive</string>
    <string name="dead">Dead</string>
    <string name="unknown">unknown</string>
    <string name="female">Female</string>
    <string name="genderless">Genderless</string>
    <string name="male">Male</string>
</resources>