<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_16_top_left_right"
    android:backgroundTint="@color/blue_dark"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/value_16"
        android:text="@string/filter"
        android:textAlignment="center"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_episodes_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:textColor="@color/white" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/value_8"
            android:orientation="horizontal"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_alive"
                style="@style/ChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alive"
                android:textSize="14sp"
                tools:ignore="TouchTargetSizeCheck" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_dead"
                style="@style/ChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dead"
                android:textSize="14sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_unknown"
                style="@style/ChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknown"
                android:textSize="14sp" />

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/tv_gender_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/value_16"
            android:text="@string/gender"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_female"
                style="@style/RadioButtonStyle"
                android:layout_marginStart="0dp"
                android:background="@drawable/checkbox_female_selector"
                android:text="@string/female" />

            <RadioButton
                android:id="@+id/rb_male"
                style="@style/RadioButtonStyle"
                android:background="@drawable/checkbox_male_selector"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/rb_genderless"
                style="@style/RadioButtonStyle"
                android:background="@drawable/checkbox_genderless_selector"
                android:text="@string/genderless" />

            <RadioButton
                android:id="@+id/rb_unknown"
                style="@style/RadioButtonStyle"
                android:background="@drawable/checkbox_unknown_selector"
                android:text="@string/unknown" />

        </RadioGroup>
    </LinearLayout>

    <TextView
        android:id="@+id/apply"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/value_24"
        android:layout_marginBottom="@dimen/value_16"
        android:paddingHorizontal="@dimen/value_32"
        android:text="@string/apply" />

</LinearLayout>